# ree-v2

./: .gitignore  CITATION.cff  CLAUDE.md  NOTICE  README.md  experiment_queue.json  experiment_runner.py  pyproject.toml  restart_after_exq016.sh  script_timing.json
.github/workflows/: enforce-single-branch.yml  qualification-ci.yml
contracts/: hook_registry.v1.json  ree_assembly_contract_lock.v1.json
docs/architecture/: design_decisions.md  e2.md
docs/ops/: cloud_backend_setup.md  compute_execution_policy.md  local_compute_options.md
evidence/experiments/: INTERFACE_CONTRACT.md  stop_criteria.v1.yaml
evidence/planning/: README.md
experiments/: __init__.py  action_doing_mode_probe.py  action_loop_completion_gate.py  attribution_completion_gating.py  causal_attribution_calibration.py  causal_grid_world_baseline.py  commitment_boundary_validation.py  control_plane_precision_separation.py  e1_e2_terrain_timescale.py  kernel_chaining_interface.py  metrics.py  pack_writer.py  path_memory_ablation.py  precision_regime_probe.py  residue_trajectory_placement.py  rollout_viability_mapping.py  run.py  selective_residue_attribution.py  suites.json  valence_regime_correlation.py  write_locus_contamination.py
jobs/outgoing/: commit_dual_error_channels__pre_post_split_streams.json  commit_dual_error_channels__single_error_stream.json  jepa_anchor_ablation__ema_anchor_off.json  jepa_anchor_ablation__ema_anchor_on.json  trajectory_integrity__trajectory_first_ablated.json  (+3 more)
ree_core/: agent.py
scripts/: build_remote_job_spec.py  check_handoff_queue.py  check_seed_determinism.py  check_third_party_compliance.py  cross_repo_roundtrip.sh  dispatch_roundtrip.sh  estimate_run_resources.py  generate_weekly_handoff.py  pull_remote_results.py  run_profile.py  run_qualification_batch.py  submit_remote_job.py  validate_experiment_pack.py  validate_hook_surfaces.py  validate_weekly_handoff.py  verify_jepa_checkpoint.py
tests/: test_agent.py  test_environment.py
(+2416 files in other folders)
